# Masters-Study-Project

./: .gitignore  Project_roadmap.md  README.md  figure1_optimizer_instability.ipynb  figure2.py  mnist_hessian_covariance_notebook.ipynb  mnist_optimizer_validation.ipynb  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
experiments/section4/: brownian_motion.py  optimizer_instability.py
experiments/section5/: dead_units.py  feature_rank.py  weight_norm.py  weight_rank.py
notebooks/: figure1_optimizer_instability.ipynb  figure2_brownian_motion_reproduction.ipynb  figure2_brownian_motion_reproduction_self_contained.ipynb  figure3_falsification_reproduction.ipynb  figure3_falsification_standalone.ipynb  figure4-checkpoint-probe-curves-standalone.ipynb  figure4_checkpoint_probe_curves.ipynb  figure4_checkpoint_probe_curves_standalone.ipynb  figure5_width_sweep.ipynb  figure5_width_sweep_standalone.ipynb  figure6_intervention_matrix.ipynb  grad_experiment.py  mnist_hessian_covariance_notebook.ipynb  plasticity_hessian_mnist_experiment.ipynb
notebooks/checkpoints/: hessian_step_10000.pt  hessian_step_100000.pt  hessian_step_105000.pt  hessian_step_110000.pt  hessian_step_115000.pt  hessian_step_120000.pt  hessian_step_125000.pt  hessian_step_130000.pt  hessian_step_135000.pt  hessian_step_140000.pt  hessian_step_145000.pt  hessian_step_15000.pt  hessian_step_150000.pt  hessian_step_155000.pt  hessian_step_160000.pt  hessian_step_165000.pt  hessian_step_170000.pt  hessian_step_175000.pt  hessian_step_180000.pt  hessian_step_185000.pt  hessian_step_190000.pt  hessian_step_195000.pt  hessian_step_20000.pt  hessian_step_200000.pt  hessian_step_25000.pt  hessian_step_30000.pt  hessian_step_35000.pt  hessian_step_40000.pt  hessian_step_45000.pt  hessian_step_5000.pt  hessian_step_50000.pt  hessian_step_55000.pt  hessian_step_60000.pt  hessian_step_65000.pt  hessian_step_70000.pt  hessian_step_75000.pt  hessian_step_80000.pt  hessian_step_85000.pt  hessian_step_90000.pt  hessian_step_95000.pt
outputs/: figure3_falsification_summary.csv  figure4_checkpoint_probe_curves.csv  figure5_width_sweep.csv  figure6_intervention_matrix.csv
outputs/matplotlib_cache/: fontlist-v390.json
outputs/tables/: figure3_tiny_summary.csv
reports/: main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.glg  main.ist  main.out  main.slg  main.tex  main.toc  setup.tex
reports/references/: glossary.tex  motivation.bib
reports/sections/: abstract.aux  abstract.tex  acknowledgements.aux  acknowledgements.tex  conclusion.aux  conclusion.tex  cover.aux  fundamentals.aux  fundamentals.tex  information.aux  information.tex  methodology.aux  methodology.tex  motivation.aux  motivation.tex  quote.aux  references.aux  references.tex  results.aux  results.tex  table_of_contents.aux
scripts/: inspect_ranks.py
src/agents/: ddqn.py  dqn.py  replay_buffer.py
src/analysis/: __init__.py  gradient_covariance.py  hessian_ghorbani.py  kmeans.py  probe_loss.py
src/environments/: __init__.py  classification_mdp.py  easy_mdp.py  hard_mdp.py  sparse_mdp.py
src/experiments/: brownian_motion.py  checkpoint_probe_curves.py  dead_units.py  dqn_classification.py  feature_rank.py  figure2_legacy.py  figure2_true_label_mdp.py  figure3_falsification.py  figure5_width_sweep.py  figure6_interventions.py  gradient_covariance.py  optimizer_instability.py  plane_points.py  plasticity.py  weight_norm.py  weight_rank.py
src/metrics/: hessian.py
src/models/: __init__.py  cnn.py  mlp.py  resnet.py  vit.py
src/pyhessian/: __init__.py  density_plot.py  hessian.py  utils.py
src/visualization/: covariance_plots.py
tests/: conftest.py  test_brownian_motion.py  test_dead_units.py  test_environments.py  test_feature_rank.py  test_gradient_covariance.py  test_models.py  test_plasticity.py  test_pyhessian.py  test_replay_buffer.py  test_weight_metrics.py
