[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasticity"
version = "0.1.0"
description = "Research code for studying neural network plasticity."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mohammad Mahdi Gheidi" },
]
dependencies = [
    "torch==2.12.0",
    "torchvision==0.27.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "scikit-learn==1.9.0",
    "ipykernel==7.2.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.6",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
    "notebooks",
    "outputs",
    "papers",
    "reports",
]

[tool.ruff.lint]
select = [
    "E9",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLW",
]
ignore = [
    # `import torch.nn.functional as F` is the standard PyTorch convention
    # used throughout this codebase and the wider ecosystem (including
    # PyTorch's own docs); renaming it would hurt readability, not help it.
    "N812",
]

[tool.ruff.lint.per-file-ignores]
# Vendored PyHessian (Yao & Gholami): variable names (Hv, THv, gradsH, T,
# maxIter, ...) mirror the published algorithm and upstream repo. Renaming
# them to satisfy naming conventions would reduce fidelity to the reference
# implementation this code is a direct port of.
"src/pyhessian/hessian.py" = ["N803", "N806"]
"src/pyhessian/utils.py" = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
