[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasticity"
version = "0.1.0"
description = "Research code for studying neural network plasticity."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mohammad Mahdi Gheidi" },
]
dependencies = [
    "torch==2.12.0",
    "torchvision==0.27.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "scikit-learn==1.9.0",
    "ipykernel==7.2.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.6",
    "pytest>=8.0",
    "pylint>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
    "notebooks",
    "outputs",
    "papers",
    "reports",
]

[tool.ruff.lint]
select = [
    "E9",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLW",
]
ignore = [
    # `import torch.nn.functional as F` is the standard PyTorch convention
    # used throughout this codebase and the wider ecosystem (including
    # PyTorch's own docs); renaming it would hurt readability, not help it.
    "N812",
]

[tool.ruff.lint.per-file-ignores]
# Vendored PyHessian (Yao & Gholami): variable names (Hv, THv, gradsH, T,
# maxIter, ...) mirror the published algorithm and upstream repo. Renaming
# them to satisfy naming conventions would reduce fidelity to the reference
# implementation this code is a direct port of.
"src/pyhessian/hessian.py" = ["N803", "N806"]
"src/pyhessian/utils.py" = ["N803", "N806"]

[tool.pylint.main]
# Run as: pylint src tests
ignore-paths = ["venv", "notebooks", "outputs", "papers", "reports"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    # Docstring-everywhere requirements don't fit research code; module and
    # class docstrings exist where they carry real information.
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # Naming policy is owned by ruff's pep8-naming (N) rules, which carry
    # documented per-file exceptions for the vendored PyHessian code and
    # scientific single-letter names. Two naming authorities would conflict.
    "invalid-name",
    # `import torch.nn as nn` / `import torch.nn.functional as F` are the
    # standard PyTorch idioms (same rationale as ruff's N812 ignore).
    "consider-using-from-import",
    # The easy/hard/sparse MDPs are deliberately parallel implementations of
    # the paper's three reward variants; their similarity is the point.
    "duplicate-code",
    # Complexity limits: experiment configs and training loops legitimately
    # take many parameters/locals in this codebase.
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-branches",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
